tests/baselines/reference/moduleAugmentationGlobal7.errors.txt
tests/cases/compiler/moduleAugmentationGlobal7.ts(2,5): error TS2666: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.


==== tests/cases/compiler/moduleAugmentationGlobal7.ts (1 errors) ====
    namespace A {
        global {
        ~~~~~~
!!! error TS2666: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.
            interface Array<T> { x }
        }
    }